force-app/main/default/objects/Shelter__c/Shelter__c.object-meta.xml
<CustomObject>
    
    <label>Shelter</label>
    <nameField>
        <label>Shelter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shelters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>