force-app/main/default/objects/Shelter__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Shelters</relationshipLabel>
    <relationshipName>Shelters</relationshipName>
    <type>Lookup</type>
</CustomField>