force-app/main/default/objects/Shelter__c/fields/Localization__c.field-meta.xml
<CustomField>
    <fullName>Localization__c</fullName>
    <label>Localization</label>
    <required>true</required>
    <scale>6</scale>
    <type>Location</type>
</CustomField>