force-app/main/default/objects/Shelter__c/fields/Number_Of_Unadopted_Animals__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Unadopted_Animals__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number_Of_Unadopted_Animals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>