force-app/main/default/objects/Shelter__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <label>PostalCode</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>